base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkshortener
  labels:
    environment: development
