base/loadbalancer-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkshortener-lb
  namespace: linkshortener
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: linkshortener
---
apiVersion: v1
kind: Service
metadata:
  name: linkshortener-analytics-lb
  namespace: linkshortener
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: linkshortener-analytics
