base/nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkshortener-nodeport
  namespace: linkshortener
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
  selector:
    app: linkshortener
---
apiVersion: v1
kind: Service
metadata:
  name: linkshortener-analytics-nodeport
  namespace: linkshortener
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
      protocol: TCP
  selector:
    app: linkshortener-analytics
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
  namespace: linkshortener
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
      protocol: TCP
  selector:
    app: postgres
