base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkshortener-ingress
  namespace: linkshortener
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: linkshortener.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkshortener
                port:
                  number: 80
    - host: analytics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkshortener-analytics
                port:
                  number: 80
